--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: #eaeaea; /* light grey background */
+      background: #ccc; /* medium grey background */
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -23,13 +23,13 @@
       width: 100%;
       height: auto;
       display: block;
-      transition: transform 0.6s ease;
+      transition: opacity 0.6s ease;
     }
-    .flip-left {
-      transform: rotateY(-180deg);
+    .fade-out {
+      opacity: 0;
     }
-    .flip-right {
-      transform: rotateY(180deg);
+    .fade-in {
+      opacity: 1;
     }
     .nav {
       position: absolute;
@@ -48,6 +48,7 @@
       opacity: 0.7;
       cursor: pointer;
       transition: opacity 0.2s ease;
+      z-index: 2;
     }
     .nav button:hover {
       opacity: 1;
@@ -64,7 +65,7 @@
       <button id="prevBtn">&#10094;</button>
       <button id="nextBtn">&#10095;</button>
     </div>
-    <img id="pageImg" src="page1.jpg" alt="Page 1" />
+    <img id="pageImg" src="page1.jpg" alt="Page 1" class="fade-in" />
   </div>
   <div class="footer">
     <span id="pageNum">1</span> / <span id="pageTotal">31</span>
@@ -77,28 +78,30 @@
     const pageNumEl = document.getElementById('pageNum');
     const pageTotalEl = document.getElementById('pageTotal');
 
-    function updateReader(direction) {
-      imgEl.classList.remove('flip-left', 'flip-right');
-      void imgEl.offsetWidth; // trigger reflow
-      if (direction === 'next') imgEl.classList.add('flip-right');
-      if (direction === 'prev') imgEl.classList.add('flip-left');
+    function updateReader() {
+      imgEl.classList.remove('fade-in');
+      imgEl.classList.add('fade-out');
 
-      imgEl.src = `page${currentPage}.jpg`;
-      imgEl.alt = `Page ${currentPage}`;
-      pageNumEl.textContent = currentPage;
+      setTimeout(() => {
+        imgEl.src = `page${currentPage}.jpg`;
+        imgEl.alt = `Page ${currentPage}`;
+        pageNumEl.textContent = currentPage;
+        imgEl.classList.remove('fade-out');
+        imgEl.classList.add('fade-in');
+      }, 300);
     }
 
     document.getElementById('prevBtn').addEventListener('click', () => {
       if (currentPage > 1) {
         currentPage--;
-        updateReader('prev');
+        updateReader();
       }
     });
 
     document.getElementById('nextBtn').addEventListener('click', () => {
       if (currentPage < totalPages) {
         currentPage++;
-        updateReader('next');
+        updateReader();
       }
     });
 
