--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
     }
     .page {
       width: 100%;
-      transition: transform 0.8s ease;
+      opacity: 1;
+      transition: opacity 0.4s ease;
     }
     .fade-out {
       opacity: 0;
-      transition: opacity 0.4s ease;
     }
     .fade-in {
       opacity: 1;
-      transition: opacity 0.4s ease;
     }
     .nav {
       position: fixed;
@@ -86,11 +85,13 @@
       imgEl.classList.add('fade-out');
 
       setTimeout(() => {
+        imgEl.onload = () => {
+          imgEl.classList.remove('fade-out');
+          imgEl.classList.add('fade-in');
+        };
         imgEl.src = `page${currentPage}.jpg`;
         imgEl.alt = `Page ${currentPage}`;
         pageNumEl.textContent = currentPage;
-        imgEl.classList.remove('fade-out');
-        imgEl.classList.add('fade-in');
       }, 400);
     }
 
